tests/typechecking/correct/iftest.spl
Int main(Int a) {
	Int b = 0;
	Int c = 1;
	
	if (a < 0) {
		b = a+5;
		c = 2*b;
	} else {
		b = a-5;
		c = 3*b;
	}
	
	return c;
}

Int abs(Int a) {
	if (a < 0)
		a = -a;
	return a;
}

Int g(Int a, Int b) {
	if (a < b)
		return 1;
	else
		return 0;
}

Int h(Int a, Int b) {
	if (a < b) {
		return 1;
	} else
		return 0;
}

Int i(Int a, Int b) {
	if (a < b)
		return 1;
	else {
		return 0;
	}
}
